[tool.poetry]
name = "repl_pygame_lightcycle"
version = "0.1.0"
description = ""
authors = ["DanielMiao1 <danielmiao2019@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
