[tool.poetry]
name = "LightCycle"
version = "0.1.0"
description = "The game of lightcycle, implemented in Python 3 using PyGame"
authors = ["Daniel Miao replit.com/@DanielMiao1 github.com/DanielMiao1", "Roy Yi replit.com/@royyi github.com/royyi"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
